--- a/MemoryLeakIssues/MemoryLeakIssues.csproj
+++ b/MemoryLeakIssues/MemoryLeakIssues.csproj
@@ -10,15 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
+    <PackageReference Include="Avalonia" Version="11.2.999-cibuild0048543-alpha" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.999-cibuild0048543-alpha" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.999-cibuild0048543-alpha" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.999-cibuild0048543-alpha" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
-    <PackageReference Include="Dock.Avalonia" Version="11.0.0.7" />
-    <PackageReference Include="Dock.Model.Mvvm" Version="11.0.0.7" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.999-cibuild0048543-alpha" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\lib\Dock.Avalonia\src\Dock.Avalonia\Dock.Avalonia.csproj" />
+    <ProjectReference Include="..\lib\Dock.Avalonia\src\Dock.Model.Mvvm\Dock.Model.Mvvm.csproj" />
   </ItemGroup>
 </Project>
